dev/sass/partials/catalog/_filters.sass
.filters
  &__wrapper
    padding: 0 20px
    margin-top: 40px
    margin-bottom: 20px
    @include media-breakpoint-up(md)
      padding: 0
      margin: 0
  &__heading
    display: flex
    align-items: center
    justify-content: center
    font-weight: 400
    background: $yellow
    border-radius: 3px
    width: 280px
    padding: 6px 0
    margin-left: auto
    margin-right: auto
    margin-bottom: 10px
    @include media-breakpoint-up(md)
      width: 246px
      padding: 11px 0
      margin: 0
    @include media-breakpoint-up(xl)
      display: none
    .text
      font-size: 13px
      line-height: 20px
      letter-spacing: .05em
      text-transform: uppercase
      padding-left: 10px
  &__content
    display: none
    width: 280px
    margin-left: auto
    margin-right: auto
    @include media-breakpoint-up(md)
      background: $white
      position: relative
      width: 246px
      z-index: 1
      max-height: 744px
      overflow-y: auto
      padding: 15px 0
      margin-top: 15px
    @include media-breakpoint-up(xl)
      display: block
      width: 225px
      position: static
      max-height: none
      margin-top: 25px
    .heading
      display: none
      @include media-breakpoint-up(md)
        display: block
    .search-brand
      font-size: 14px
      line-height: 22px
      height: 36px
      text-align: center
      margin: 5px 0 15px
      @include media-breakpoint-up(md)
        font-size: 17px
        line-height: 25px
  .all-brends
    display: flex
    align-items: center
    .link
      font-size: 14px
      line-height: 22px
      color: $blue
      margin-right: 8px
  &__accordion-wrapper
    padding: 0 28px
    margin-bottom: 10px
    @include media-breakpoint-up(md)
      padding: 0 10px 0 0
    @include media-breakpoint-up(xl)
      padding: 0
    .heading
      margin-bottom: 15px
    .accordion
      &.price
        .accordion__heading
          position: relative
          &::after
            content: ''
            position: absolute
            left: 55px
            width: 20px
            height: 20px
            background: url(../img/ruble.svg) no-repeat
            background-size: contain
      &__heading
        font-weight: 600
        padding: 6px 0
        @include media-breakpoint-up(md)
          font-weight: 400
        &.filters__heading
          font-weight: 400
      &__content
        margin-top: 5px;
        margin-bottom: 15px;
      .divider
        display: none
  .btn-wrapper
    display: flex
    justify-content: space-between
    @include media-breakpoint-up(xl)
      flex-direction: column-reverse
    .btn
      width: 132px
      @include media-breakpoint-up(md)
        font-size: 13px
        line-height: 20px
        width: auto
        padding: 7px 16px
      @include media-breakpoint-up(xl)
        font-size: 17px
        line-height: 21px
        width: 100%
        padding: 12px 40px
        margin-top: 15px

